# qcviz-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROGRESS.md  README.md  claude_desktop_config.json  mkdocs.yml  phase_eta.sh  pyproject.toml
.github/workflows/: ci.yml
benchmark/: molecules.py  run_benchmark.py  test_benchmark.py
docs/: 20260305.2046.얼마나왔는지.md  20260305.2048.히스토리압축.md  20260305.2059.히스토리압축.md  20260305.2113.히스토리압축.md  20260305.2119.재분석.md  20260305.2129.프롬프트.md  20260305.2143.히스토리압축.md  20260305.2212.히스토리압축.md  20260305.2219.논문화전략.md  20260305.2227.세가지고도화계획.프롬프트.md  20260305.2231.세가지고도화계획.md  20260306.0028.히스토리압축.md  20260306.0039.논문화전략.md  20260306.0055.고도화.md  20260306.0115.고도화피드백.md  Claude.md  HISTORY00.md  HISTORY01.md  HISTORY02.md  SYSTEM_REPORT.md  api.md  examples.md  index.md
docs/api/: backends.md  server.md  tools.md
examples/: 01_water_ibo.py  02_orca_parse_viz.py
paper/: paper.bib  paper.md
src/qcviz_mcp/: __init__.py  mcp_server.py
tests/: conftest.py  test_ase_backend.py  test_basis_independence.py  test_benchmark.py  test_cclib_backend.py  test_convergence_strategy.py  test_convert_format.py  test_heavy_tm.py  test_mcp_server.py  test_molden_validation.py  test_parse_output.py  test_partial_charges.py  test_png_export.py  test_pyscf_backend.py  test_pyvista_renderer.py  test_registry.py  test_security.py  test_tools.py  test_transition_metal.py  test_uhf_ibo.py  test_viz_backend.py
tests/fixtures/: methane_gaussian_mock.out  water.xyz  water_orca_mock.out
version04/: .env.example  .gitignore  start-qcviz.sh  tmp_notes_test.pptx  verify_regression_all.py
version04/docs/: DAY1-2_RESULT.md  DAY11-14_RESULT.md  DAY11-14_prompt_assets_additions.md  DAY3-4_RESULT.md  DAY5-7_RESULT.md  DAY5-7action_planner_addition.md  FG_SUBSTITUTION_IMPLEMENTATION.md  P2_DAY1-3_RESULT.md  P2_DAY1-3_structure_intelligence.py  P2_DAY10-14_RESULT.md  P2_DAY4-6_RESULT.md  P2_DAY7-9_RESULT.md  P3_DAY1-4_RESULT.md  P3_DAY12-14_RESULT.md  P3_DAY5-7_RESULT.md  P3_DAY8-11_RESULT.md  P4_DAY1_RESULT.md  P4_DAY2_RESULT.md  P4_DAY3_RESULT.md  P4_DAY4_RESULT.md  P4_DAY5_RESULT.md  P4_DAY6_RESULT.md  P4_DAY7_FINAL.md  (+6 more)
(+330 files in other folders)
